<resources>
    <string name="app_name">半亩</string>
    <string name="image_source">图片来源</string>
    <string name="zhihu_daily">知乎日报</string>
    <string name="violet_evergarden">紫罗兰永恒花园</string>
    <string name="comics">动漫</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="please_select">请选择</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="douban_movie">豆瓣电影</string>
    <string name="status_layout_manager_loading">正在加载</string>
    <string name="status_layout_manager_empty">还没有内容</string>
    <string name="status_layout_manager_error">电波无法到达</string>
    <string name="status_layout_manager_retry">重新加载</string>
    <string name="transition_movie_img">transition_movie_img</string>
    <string name="score">分</string>
    <string name="wan_android">玩安卓</string>
    <string name="gank_io">干货集中营</string>
    <string name="search">搜索</string>
    <string name="movie_search">电影搜索</string>
    <string name="search_movie_hint">电影/演员/导演</string>
    <string name="menu">菜单</string>
    <string name="open_with_browser">浏览器打开</string>
    <string name="copy_url">复制链接</string>
    <string name="share">分享</string>
    <string name="copy_success">复制成功</string>
    <string name="orange_title">句子迷</string>
    <string name="save">保存</string>
    <string name="computer_fan">电脑爱好者</string>
    <string name="box_office">票房</string>
    <string name="development">开发</string>
    <string name="setting">设置</string>
    <string name="no_finish">还没写好呢</string>
    <string name="nba_schedule">NBA赛程</string>
    <string name="basketball_team">球队</string>
    <string name="live">直播</string>
    <string name="sport_live">体育直播</string>
    <string name="match_not_start">比赛暂未开始</string>
    <string name="today">Today</string>
    <string name="switch_signal">切换信号源</string>
    <string name="cctv5">CCTV5</string>
    <string name="today_english">每日英文</string>
    <string name="today_article">每日一文</string>
    <string name="word">字</string>
    <string name="full_text">全文</string>
    <string name="random">随机</string>
    <string name="article_end">本文完  共</string>
    <string name="bing_wallpaper">每日壁纸</string>
    <string name="one">ONE·图文</string>
</resources>
