<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_today_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="@dimen/margin_size_2"
                app:cardElevation="5dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/md_pink_800"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_count"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="11dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_13"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/app_name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/margin_size_15"
                        android:gravity="center_vertical"
                        android:text="@string/today_article"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_digest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_size_18"
                        android:layout_marginTop="@dimen/margin_size_50"
                        android:layout_marginEnd="@dimen/margin_size_18"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/app_name" />

                    <TextView
                        android:id="@+id/tv_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_size_10"
                        android:layout_marginEnd="@dimen/margin_size_18"
                        android:layout_marginBottom="@dimen/margin_size_12"
                        android:textColor="@color/color_3"
                        android:textSize="@dimen/text_size_13"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_digest" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="@dimen/margin_size_2"
                app:cardElevation="5dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/md_light_blue_700" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/margin_size_15"
                        android:gravity="center_vertical"
                        android:text="@string/today_english"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/iv_horn"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="@dimen/margin_size_7"
                        android:background="@drawable/shape_ripple"
                        android:scaleType="centerInside"
                        android:src="@mipmap/ic_horn"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <ImageView
                        android:id="@+id/iv_english"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="@dimen/margin_size_40"
                        android:scaleType="centerCrop"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_sentence"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_size_12"
                        android:textColor="@color/md_light_blue_700"
                        android:textSize="@dimen/text_size_15"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@id/iv_english"
                        tools:text="@string/app_name" />

                    <TextView
                        android:id="@+id/tv_translation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_size_12"
                        android:layout_marginTop="@dimen/margin_size_5"
                        android:layout_marginEnd="@dimen/margin_size_12"
                        android:layout_marginBottom="@dimen/margin_size_12"
                        android:textColor="@color/color_3"
                        android:textSize="@dimen/text_size_14"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_sentence" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="@dimen/margin_size_2"
                app:cardElevation="5dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="#008574" />

                    <ImageView
                        android:id="@+id/iv_copyright"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="@dimen/margin_size_7"
                        android:background="@drawable/shape_ripple"
                        android:scaleType="centerInside"
                        android:src="@mipmap/ic_info"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/margin_size_15"
                        android:gravity="center_vertical"
                        android:text="@string/bing_wallpaper"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/iv_bing"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="@dimen/margin_size_40"
                        android:scaleType="centerCrop"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="@dimen/margin_size_2"
                app:cardElevation="5dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="#F6DE01" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/margin_size_15"
                        android:gravity="center_vertical"
                        android:text="@string/one"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/tv_one_type"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="11dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_13"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="@string/app_name" />

                    <ImageView
                        android:id="@+id/iv_one"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="@dimen/margin_size_40"
                        android:scaleType="centerCrop"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_one_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:includeFontPadding="false"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/text_size_11"
                        app:layout_constraintBottom_toBottomOf="@id/iv_one"
                        app:layout_constraintStart_toStartOf="@id/iv_one" />

                    <TextView
                        android:id="@+id/tv_one_sentence"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_size_12"
                        android:textColor="@color/color_3"
                        android:textSize="@dimen/text_size_14"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_one" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>